--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,7 +9,7 @@ tasks:
 
   lint:
     cmds:
-      - docker run --rm -v {{toSlash .ROOT_DIR}}:/app -w /app golangci/golangci-lint:v2.6.2 golangci-lint run -v --timeout 5m
+      - docker run --rm -v {{toSlash .ROOT_DIR}}:/app -w /app golangci/golangci-lint:v2.9.0 golangci-lint run -v --timeout 5m
 
   upgrade-libraries:
     cmds:
@@ -36,7 +36,7 @@ tasks:
 
   release:
     cmds:
-      - git tag -a v0.2.2 -m "Built with Go 1.25.0. Upgrade dependencies."
-      - git push origin v0.2.2
+      - git tag -a v1.0.0 -m "Built with Go 1.26. Refactor download logic."
+      - git push origin v1.0.0
       - goreleaser release
 
